--- a/signup.html
+++ b/signup.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <form action="" method="">
+        <form action="" method="post">
             <h1 id="singup_form_header">Create a new account</h1>
             
             <input type="text" name="firstname" id="fname" placeholder="First name" required>
