--- a/login.html
+++ b/login.html
@@ -10,14 +10,14 @@
 
     <h2 id="micro">MICROLAB</h2>
 
-    <form action="" method="">
+    <form action="" method="post">
         <input type="email" name="" id="email_id" placeholder="Email address">
         <br><br>
         <input type="password" name="" id="pass_id" placeholder="Password">
         <br><br>
         <a href="./dashboard.html" id="login_link">Log in</a>
         <br><br>
-        <a href="./signup.html" id="new_account">Create new account</a>
+        <a href="" id="new_account">Create new account</a>
     </form>
 
     <script>
