--- a/signup.html
+++ b/signup.html
@@ -71,15 +71,14 @@
             console.log('JSON Data: ', a);
 
             // POST request to the backend 
-            await fetch ('http://localhost:3000', {
+            await fetch ('http://localhost:3000/signup', {
                 method: 'POST',
-                Headers: { 'Content-Type':'application/json' },
+                headers: { 'Content-Type':'application/json' },
                 body: JSON.stringify(form_data)
             })
-            .then((response)=>response.json())
-            .then(data=>console.log(data))
-            .catch(error=>console.log(error.message))
-
+            .then(response=>response.json())
+            .then(data=>console.log('Server Response: ', data))
+            .catch(error=>console.error(error.message))
         });
 
 
